# suckless-mcp

./: Cargo.toml  LICENSE  README.md  install.sh
docs/: docker.md  generate_cli.md
examples/: config.toml  keys.toml
examples/prompts/: generate_cli.md
releases/latest/download/: suckless-mcp-x86_64-unknown-linux-gnu
skills/test_skill/: SKILL.md  skill.toml  test_skill.py
src/: main.rs
