[package]
name = "suckless-mcp"
version = "0.3.0"
edition = "2021"
description = "Turn any CLI tool into an MCP endpoint - minimal gateway with per-tool auth"
license = "MIT"
repository = "https://github.com/roverbird/suckless-mcp"
homepage = "https://github.com/roverbird/suckless-mcp"
documentation = "https://github.com/roverbird/suckless-mcp#readme"
keywords = ["mcp", "model-context-protocol", "gateway", "cli", "llm"]
categories = ["command-line-utilities", "web-programming"]
authors = ["roverbird"]
readme = "README.md"

# Add this to exclude unnecessary files
include = [
    "src/**/*.rs",
    "README.md",
    "LICENSE",
    "skills/**/*",
]

[[bin]]
name = "suckless-mcp"
path = "src/main.rs"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
dashmap     = "5"
regex       = { version = "1", default-features = false, features = ["std"] }
chrono      = { version = "0.4", default-features = false, features = ["std", "now"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tokio-stream        = { version = "0.1", features = ["sync"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

